--- a/typst.toml
+++ b/typst.toml
@@ -1,8 +1,10 @@
 [package]
 name = "mtret"
-version = "0.1.2"
+version = "0.1.0"
 entrypoint = "lib.typ"
 authors = ["hinshiba"]
 license = "MIT"
-description = "Modular Typst REport Template for ja"
+description = "Modular Typst REport sTyle for ja students."
 repository = "https://github.com/hinshiba/MTReT"
+exclude = ["example"]
+categories = ["report"]
